2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Changer_diskflat.pl: Use File::Path::rmtree.

2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/diskflat-device.c: Check result of ftruncate.

2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Add --external-copy argument.
	* man/xml-source/amrmtape.8.xml: Document --external-copy argument.
	* perl/Amanda/Label.pm: Implement external_copy argument.
	* perl/Amanda/Rest/Storages/Labels.pm: Ditto.

2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/diskflat-device.c (erase): Add method.
	* perl/Amanda/Changer/diskflat.pm: New chg-diskflat changer.
	* perl/Amanda/Changer.pm (label_to_slot): New method.
	* perl/Makefile.am: Add Amanda/Changer/diskflat.pm.
	* installcheck/Amanda_Changer_diskflat.pl: Test chg-diskflat.
	* installcheck/Makefile.am: Add Amanda_Changer_diskflat.
	* server-src/amreport.pl: Remove degugging.

2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/libs.m4: Search pkg-config in /opt/csw/bin.

2014-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/xfer-source-holding.c: Allow to rad s SPINT_DUMPFILE
	  from holding disk.

2014-05-07  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/sun-pkg/buildpkg: gmake is in /opt/csw/bin

2014-05-06  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/sun-pkg/buildpkg: Use /usr/csw/bin/gmake if available.

2014-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c (start_some_dumps): Fix if a disk is moved to
	  directq.

2014-05-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactivity/stdin.pm, server-src/amcheckdump.pl,
	  server-src/amfetchdump.pl, server-src/amvault.pl: Disable
	  interactivity if STDIN can't be read.

2014-05-01  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c (xml_check_options): Set dumper_kencrypt.
