@@ -1,3 +1,6 @@
+2014-05-09  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/sendsize.c: Fix compiler warning.
+
 2014-05-08  Jean-Louis Martineau <martineau@zmanda.com>
 	* installcheck/Amanda_Changer_diskflat.pl: Use File::Path::rmtree.
 
